--- a/userparameter_zimbra_queue.conf
+++ b/userparameter_zimbra_queue.conf
@@ -1,15 +1,2 @@
-#!/bin/bash
-
-# Set Path
-path=$1
-
-# Set queue
-queue=$2
-
-if [ -z $path ] || [ -z $queue ]
-then
-  echo "Pass any value for path and queue"
-else
-  # Find queue by parameter
-  /opt/zimbra/common/sbin/postqueue -p | find $path/$queue/ -type f | wc -l
-fi
+# UserParameter Queue's Zimbra
+UserParameter=postfix.queue[*],sudo /etc/zabbix/scripts/zimbra_queue.sh $1 $2
